# python_backend

./: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg
backend/configs/: settings.py
